--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       TZ: UTC
       LogLevel: INFO
     volumes:
-      - certs/x509:/root/certs/x509:ro
+      - ../certs/x509:/go/src/certs/x509:ro
     networks:
       - go_dev
 
